syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.generated.Reservation";
option java_outer_classname = "ReservationImpl";

package smartparking;

//This service will allow reservation
service ReservationService{
//Provides data about reservation - bi-directional streaming
    rpc Reservation (stream ReservationRequest) returns (stream ReservationReply){};
}

//Request message for reservation request
message ReservationRequest{
    string userID = 1;
    string date = 2;
    string time = 3;
    string reservationID = 4;
}

//Reply message for reservation request
message ReservationReply{
    string message = 1; //Message informing if the reservation was done succesfully or not
    bool reserved = 2; //True or false to inform about the reservation
    string reservationDetails = 3;
}
